cmake_minimum_required(VERSION 3.30)
project(cpu-x86 VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_DEBUG_POSTFIX d)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/std:c++17)
endif()

add_subdirectory(src/x86)

install(TARGETS cpu-x86
    EXPORT ${PROJECT_NAME}Config
    FILE_SET HEADERS
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION include)
	
export(TARGETS cpu-x86
	NAMESPACE ${PROJECT_NAME}::
	FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
)
	
install(EXPORT ${PROJECT_NAME}Config
	DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/cmake/${PROJECT_NAME}"
	NAMESPACE ${PROJECT_NAME}::
)